# cujpg

./: .gitignore  CMakeLists.txt  README.md  cujpg.hpp  demo.cpp  test_gpu_time.sh
cuda/: CMakeLists.txt  cujpg_kernel.cu  cujpg_kernel.cuh
include/: Endianess.h  Exceptions.h  cujpg.h  cujpg.hpp  cujpg_config.h  cujpg_utils.h  helper_cuda.h  jpg.h  timer.h
source/: cujpg.cpp  cujpg_baseinfo.cpp  cujpg_mainbody.cpp  cujpg_utils.cpp
